[stage] walk animation

--- a/conf.ini
+++ b/conf.ini
@@ -1,14 +1,15 @@
 [debug_text]
-monkey_cl_pos = (20,230)
-monkey_cr_pos = (20,265)
+monkey_cl_pos = (20,280)
+monkey_cr_pos = (20,315)
 [obj_door]
 floor_align = 400.0
 [monkey]
 doorL = 80.0
-doorR = 540.0
-speed = 60.0
-sleep_time = 300
+doorR = 565.0
+speed = 15.0
+sleep_time = 100
+floor_align = 120.0
 [obj_bridge]
 scale = (0.4,0.4)
-el0_pos = (110,230)
-el1_pos = (320,230)
+el0_pos = (110,220)
+el1_pos = (320,220)
